# python-etcd3

./: .build.yml  .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .mergify.yml  .project  .pydevproject  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  MakefileHelp.mk  README.md  README.rst  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  prgate.yaml  python-etcd3-tests.yml
dev/: get_protos
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
etcd3/: __init__.py  aioclient.py  base_client.py  client.py  client_facade.py  endpoint.py  events.py  exceptions.py  leases.py  locks.py  members.py  role.py  transactions.py  user.py  utils.py  watch.py
etcd3/aio/: client.py  leases.py  locks.py  members.py  transactions.py  watch.py
etcd3/aio/etcdrpc/: rpc_grpc.py  rpc_pb2.py
etcd3/etcdrpc/: __init__.py  auth_grpc.py  auth_pb2.py  auth_pb2_grpc.py  kv_pb2.py  kv_pb2_grpc.py  rpc_pb2.py  rpc_pb2_grpc.py
etcd3/etcdserver/etcdserverpb/: rpc_pb2.py
etcd3/gogoproto/: gogo_pb2.py
etcd3/proto/: auth.proto  rpc.proto
etcd3aio/: __init__.py  client.py  leases.py  transactions.py  watch.py
etcd3aio/etcdrpc/: __init__.py  auth_pb2.py  kv_grpc.py  rpc_grpc.py  rpc_pb2.py
etcd3aio/proto/: rpc.proto
requirements/: base.in  base.txt  test.in  test.txt
tests/: ca.crt  client.crt  client.key  conftest.py  test_aioclient.py  test_client.py  test_endpoint.py  test_etcd3.py  test_etcd3_aio.py  test_etcd3aio.py
